# liblogging

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
cmake/: BuildForWinXP.cmake
src/exe/: AppComponent.hpp  CMakeLists.txt  LoggingDto.h  MyController.hpp  MyLoggingRequestHandler.h  main.cpp
src/lib/: CMakeLists.txt
src/lib/impl/synyi/logging/: client.cpp  core.export.cpp  core.wrapper.cpp  version.c.in
src/lib/impl/synyi/utils/: ArgsHelper.cpp
src/lib/impl/utils/ChannelsCPP/: Channel.cpp  ChannelBuffer.cpp  ChannelUtility.cpp  Circular_buffer.cpp  IChannel.cpp  OChannel.cpp
src/lib/impl/utils/communication/http/: http_client.cpp  http_request.cpp  http_response.cpp
src/lib/include/private/synyi/utils/: json_bridge.h
src/lib/include/private/synyi/utils/ChannelsCPP/: Channel.h  ChannelBuffer.h  ChannelUtility.h  Circular_buffer.h  IChannel.h  OChannel.h
src/lib/include/private/synyi/utils/communication/http/: http_client.h  http_exception.h  http_methods.h  http_request.h  http_response.h
src/lib/include/private/synyi/utils/config/: configuration_container.h  configuration_utils.h
src/lib/include/public/synyi/logging/: Logging_sink.h  MyLoggingRequestInterceptor.h  MyLoggingResponseInterceptor.h  MyOatppLogger.h  client.h  core.h  core.hpp
src/lib/include/public/synyi/utils/: ArgsHelper.h
utility/: bootstrap.sh  build.sh  build.x86-winxp-vs.ps1
